# pytherm

./: .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  liquids.py  lser.py  pyproject.toml  requirements_docs.txt  setup.py  sm.py  solver.py  unifac lle.py
activity/: __init__.py  base.py  unifac.py
activity/db/unifac/: __init__.py  io.py  sub.csv
activity/db/unifac/DOR/: 1t.csv  (+2 more)
db/lser/: cons.py  io.py  out.csv  subs.csv
docs/: activity_coefficients.rst  conf.py  index.rst  modules.rst  pytherm.activity.activity_model.rst  pytherm.activity.db.unifac.parameters.dor.rst  pytherm.activity.db.unifac.parameters.inf.rst  pytherm.activity.db.unifac.parameters.lle.rst  pytherm.activity.db.unifac.parameters.psrk.rst  pytherm.activity.db.unifac.parameters.rst  pytherm.activity.db.unifac.parametersIO.rst  pytherm.activity.db.unifac.rst  pytherm.activity.rst  pytherm.activity.unifac.rst  pytherm.activity.unifac_old.rst  pytherm.eos.eos.rst  pytherm.eos.rst  pytherm.gaseq.rst  pytherm.lser.rst  pytherm.rst  pytherm.solver.rst  requirements_docs.txt
docs/source/: activity_coefficients.rst  conf.py  index.rst  pytherm.activity.db.pitzer.harvie84.rst  pytherm.activity.db.pitzer.kim88.rst  pytherm.activity.db.pitzer.parametersIO.rst  pytherm.activity.db.pitzer.rst  pytherm.activity.db.rst  pytherm.activity.db.unifac.defsubs.rst  pytherm.activity.db.unifac.io.rst  pytherm.activity.db.unifac.parameters.nist2015.rst  pytherm.activity.db.unifac.parameters.rst  pytherm.activity.db.unifac.parameters.vle.rst  pytherm.activity.db.unifac.parametersIO.rst  pytherm.activity.pitzer.rst  pytherm.activity.sit.rst  pytherm.activity.unifac.rst  pytherm.activity.uniquac.rst  pytherm.base.rst  pytherm.constants.rst  pytherm.eos.psrk.rst  pytherm.lle.rst  pytherm.rst  pytherm.sm.rst  pytherm.stoichiometry.rst  pytherm.vle.rst
docs/source/pytherm/: pytherm.activity.rst  pytherm.activity.unifac.rst  pytherm.activity.uniquac.rst  pytherm.parameters.unifac.datasets.rst
examples/: PSRK Pxy plot.py  Pxy plot.py  calculate equilibrium.py  calculate kp unifac.py  gas eq.py  kp from table.py  pitzer and sit activity.py  reaction equilibrium in gas.py  reaction equilibrium in water.py  shreder.py  solubility3.py  unifac activity coefficients.py  unifac in2.csv  unifac lle.py  unifac new.py  uniquac y calculation.py
pytherm/: __init__.py  base.py  constants.py  gaseq.py  gaseq_prototype.py  liquids.py  lle.py  lser.py  solver.py  stoichiometry.py  systems.py  systems_old.py  vle.py
pytherm/activity/: __init__.py  activity_model.py  activitymodel.py  electrolytemodel.py  electrolytes.py  pitzer copy.py  pitzer.py  pitzer_new.py  sit.py  unifac.py  unifac_numba.py  unifac_old.py  uniquac.py  uniquac_old.py
pytherm/activity/db/: __init__.py
pytherm/db/lser/: 1.csv  1.py  2.csv  constants.py  io.py  out.csv  subs.csv  subs2.csv  subs3.csv
pytherm/eos/: __init__.py  eos.py  psrk.py
pytherm/systems/: chemicalsystem.py  equilibriumsystem.py  phase.py
pytherm/systems_test/: chemicalsystem.py  equilibriumsolver.py  equilibriumsystem.py
src/binds/: CMakeLists.txt  activity.py.cpp  pytherm.py.cpp
src/binds/activity/: activitymodel.py.cpp  unifac.py.cpp  uniquac.py.cpp
src/pytherm/: CMakeLists.txt  activity.py.cpp  pybind11.h  pytherm.py.cpp  stoichiometry.cpp  stoichiometry.h  vecop.h
src/pytherm/activity/: activitymodel.h  activitymodel.py.cpp  electrolytemodel.h  electrolytemodel.py.cpp  unifac.cpp  unifac.h  unifac.py.cpp  unifac_fv.cpp  unifac_fv.h  unifac_visco.cpp  unifac_visco.h  uniquac.cpp  uniquac.h  uniquac.py.cpp
temporary/: el test.py  el test2.py
tests/: t copy.py  t.py  test_pytzer.py
(+45 files in other folders)
