[project]
name = "pytherm"
version = "0.2.0"
description = "Pytherm is an open-source scientific Python package for thermodynamic modeling"
license = {file = "LICENSE"}
keywords = ["chemistry",]
authors = [
  {name = "Ignaty Efimov", email = "efimov.ignaty@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy"
]
readme = "README.rst"

[project.urls]
Repository = "https://github.com/PsiXYZ/pytherm"
Documentation = "https://pytherm.readthedocs.io/en/latest/"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Debug"
build-dir = "./build"
